; ModuleID = '/home/carl/AnghaBench/vlc/src/posix/extr_thread.c_vlc_sem_post.c'
source_filename = "/home/carl/AnghaBench/vlc/src/posix/extr_thread.c_vlc_sem_post.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@errno = common dso_local global i32 0, align 4
@EOVERFLOW = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"unlocking semaphore\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vlc_sem_post(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = call i64 @sem_post(i32* %5)
  %7 = icmp eq i64 %6, 0
  %8 = zext i1 %7 to i32
  %9 = call i64 @likely(i32 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %24

12:                                               ; preds = %1
  %13 = load i32, i32* @errno, align 4
  store i32 %13, i32* %4, align 4
  %14 = load i32, i32* %4, align 4
  %15 = load i32, i32* @EOVERFLOW, align 4
  %16 = icmp ne i32 %14, %15
  %17 = zext i1 %16 to i32
  %18 = call i64 @unlikely(i32 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %12
  %21 = call i32 @VLC_THREAD_ASSERT(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  br label %22

22:                                               ; preds = %20, %12
  %23 = load i32, i32* %4, align 4
  store i32 %23, i32* %2, align 4
  br label %24

24:                                               ; preds = %22, %11
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}

declare dso_local i64 @likely(i32) #1

declare dso_local i64 @sem_post(i32*) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @VLC_THREAD_ASSERT(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
